--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "16.x"
+  },
   "scripts": {
+    "start": "node dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-dev": "nodemon -e ts,json,mustache src/server.ts"
-
+    "start-dev": "nodemon -e ts,json,mustache src/server.ts",
+    "postinstall": "tsc && copyfiles -u 1 src/**/*.mustache dist/"
   },
   "repository": {
     "type": "git",
@@ -26,6 +30,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/mustache-express": "^1.2.1",
-    "@types/node": "^17.0.23"
+    "@types/node": "^17.0.23",
+    "copyfiles": "^2.4.1"
   }
 }
