--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "node": "16.x"
   },
   "scripts": {
+    "tsc": "tsc",
     "start": "node dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-dev": "nodemon -e ts,json,mustache src/server.ts",
-    "postinstall": "tsc && copyfiles -u 1 src/**/*.mustache dist/"
+    "postinstall": "npm run tsc && copyfiles -u 1 src/**/*.mustache dist/"
   },
   "repository": {
     "type": "git",
@@ -25,7 +26,8 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "mustache-express": "^1.3.2"
+    "mustache-express": "^1.3.2",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
